--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
@@ -196,3 +196,9 @@ EasyPR.xcodeproj/
 
 # Debug tmp files
 tmp/
+
+# CMakeFiles
+CMakeFiles/
+CMakeCache.txt
+Makefile
+*.cmake
